# 3D-Model-Viewer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: master-build.yml
docs/: Untitled.mdj  design.mdj
resources/shaders/: colored_object.fs  dynamic_color.fs  light.vs  yellow.fs
sources/: CMakeLists.txt  DisplaySettings.h  application.cpp  application.hpp  config.h  definitions.h  main.cpp
sources/assets/: cube.cpp  cube.hpp
sources/core/: CMakeLists.txt  ICamera.hpp  IContext.hpp  IKeyboard.hpp  IMouse.hpp  IObject.hpp  IScene.hpp  IShader.hpp  IShaderManager.hpp  ITexture.hpp  ITextureManager.hpp
sources/core/context/: CMakeLists.txt  DisplaySettings.h  IContext.hpp  IWindow.hpp
sources/core/context/src/opengl/: context.cpp  context.hpp  window.cpp
sources/core/input/: CMakeLists.txt  IKeyboard.hpp  IMouse.hpp
sources/core/input/src/glfw/: mouse.cpp  mouse.hpp
sources/core/input/src/opengl/: keyboard.cpp  keyboard.hpp  mouse.cpp
sources/core/src/opengl/: camera.cpp  camera.hpp  context.cpp  context.hpp  keyboard.cpp  mouse.cpp  mouse.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  shader.hpp  shader_base.cpp  shader_base.hpp  shader_manager.cpp  shader_manager.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  window.cpp  window.hpp
sources/include/: common.h
sources/math/: vector.cpp  vector.h
sources/objects/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp
sources/objects/light/: directional.cpp  directional.hpp  light.cpp  light.hpp  point.cpp  point.hpp  spot.cpp  spot.hpp
sources/resources/shaders/: orange.fs
sources/shaders/: colored_object.vs  fragment_shader  lightObject.fs  lightSource.fs  rotate.vs  textured.fs  textured.vs  vertex_shader
sources/utils/: image_loader.cpp  image_loader.h  vertices.h
sources/utils/filesystem/: app_utils.cpp  app_utils.hpp
sources/utils/filesystem/mac/: app_utils.cpp
sources/utils/filesystem/unix/: app_utils.cpp
sources/utils/filesystem/win/: app_utils.cpp
sources/utils/objects/: VertexObjectBase.cpp  VertexObjectBase.h
sources/utils/opengl/: camera.cpp  camera.hpp  context.cpp  context.h  definitions.h  gl_utils.cpp  gl_utils.h  init.cpp  program.cpp  program.h
sources/utils/opengl/observers/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
sources/utils/std/: clamp.h
sources/utils/vertices/: color.cpp  color.h  normal.cpp  normal.h  object.cpp  object.h  position.cpp  position.h  texture.cpp  texture.h  vertice.h
